# personal-data-warehouse

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  pyproject.toml  workspace.yaml
.github/workflows/: pdw-cli-release.yml  postgres-pgbackrest-image.yml
app/: CHANGELOG.md  Dockerfile  README.md  go.mod  install.sh
app/cmd/pdw-cli/: auth.go  auth_test.go  autoupdate.go  autoupdate_test.go  chatgpt.go  chatgpt_test.go  claudedesktop.go  claudedesktop_test.go  download.go  download_test.go  ingest.go  ingest_test.go  main.go  run.go  run_test.go  update.go  update_test.go
app/cmd/pdw-mcp/: main.go
app/internal/api/: handler.go  handler_test.go
app/internal/auth/: clientctx.go  objectupload.go  objectupload_test.go  objecturl.go  objecturl_test.go  service.go  service_test.go  static_bearer.go  static_bearer_test.go
app/internal/buildinfo/: buildinfo.go
app/internal/chatgptsession/: service.go  service_test.go  store.go
app/internal/cliclient/: client.go  client_test.go
app/internal/cliconfig/: cliconfig.go  cliconfig_test.go
app/internal/config/: config.go  config_test.go  objectstore_config_test.go
docker/: agent-entrypoint.sh  agent.Dockerfile  dagster.yaml  entrypoint.sh  start-dagster.sh
docker/postgres-pgbackrest/: Dockerfile  README.md  backup-loop.sh  entrypoint.sh  restore.sh
docs/verification/: whoop-live-api-2026-07-11.json
mcp/: CHANGELOG.md  Dockerfile  README.md  go.mod  go.sum
ops/launchd/: com.zachlatta.personal-data-warehouse.agent-sessions-upload.plist  com.zachlatta.personal-data-warehouse.apple-contacts-upload.plist  com.zachlatta.personal-data-warehouse.apple-messages-upload.plist  com.zachlatta.personal-data-warehouse.apple-notes-upload.plist  com.zachlatta.personal-data-warehouse.claude-desktop-auth.plist  com.zachlatta.personal-data-warehouse.photos-upload.plist  com.zachlatta.personal-data-warehouse.voice-memos-upload.plist
ops/systemd/: personal-data-warehouse-agent-sessions-upload.service  personal-data-warehouse-agent-sessions-upload.timer
plans/: 001-unique-advisory-lock-ids.md  002-preserve-slack-cursor-on-error.md  003-agent-sql-proxy-readonly-connection.md  004-close-sensor-warehouse-connections.md  005-ci-gate-python-and-go-tests.md  006-go-query-path-readonly-connection.md  007-slack-bounded-transient-retry.md  008-mutation-store-ensure-tables-once.md  009-search-text-rebuild-guard.md  README.md
scripts/: ingest_e2e_driver.py  photo_caption_benchmark.py  plaid_linking_report.py
src/personal_data_warehouse/: agent_resource.py  agent_runner.py  agent_sessions_drive_ingest.py  agent_tool_proxy.py  alice_voice_recordings_drive_ingest.py  apple_contacts_drive_ingest.py  apple_messages_drive_ingest.py  apple_notes_drive_ingest.py  apple_voice_memos_drive_ingest.py  apple_voice_memos_enrichment.py  apple_voice_memos_enrichment_eval.py  apple_voice_memos_transcription.py  audio_attachment_enrichment.py  build_info.py  calendar_mutations.py  calendar_sync.py  chatgpt_backend.py  chatgpt_backend_ingest.py  chatgpt_cookies.py  chatgpt_setup.py  clickhouse.py  clickhouse_readonly.py  config.py  contact_mutations.py  contacts_sync.py  dagster_bootstrap.py  file_attachment_enrichment.py  finance_ledger.py  finance_sync.py  gmail_attachment_ai_eval.py  gmail_attachment_enrichment.py  gmail_auth.py  gmail_mutations.py  gmail_sync.py  google_auth.py  google_drive_source_sync.py  ingest_client.py  manual_finance_drive_ingest.py  manual_finance_extraction.py  mcp_server.py  (+25 more)
src/personal_data_warehouse_agent_sessions/: cli.py  scanner.py  state.py  sync.py
src/personal_data_warehouse_alice_voice_recordings/: __init__.py  api.py  gmail_recovery.py  sync.py
src/personal_data_warehouse_apple_contacts/: __init__.py  cli.py  scanner.py  state.py  sync.py
src/personal_data_warehouse_apple_messages/: __init__.py  body.py  cli.py  scanner.py  state.py  sync.py
src/personal_data_warehouse_apple_notes/: __init__.py  cli.py  notes_app.py  scanner.py  state.py  sync.py
src/personal_data_warehouse_chatgpt/: cli.py
src/personal_data_warehouse_claude_desktop/: api.py  state.py  sync.py
src/personal_data_warehouse_manual_finance/: __init__.py  cli.py  envelope.py  state.py  sync.py
src/personal_data_warehouse_photos/: __init__.py  cli.py  envelope.py  exporter.py  scanner.py  state.py  sync.py
src/personal_data_warehouse_plaid/: __init__.py  cli.py
src/personal_data_warehouse_voice_memos/: __init__.py  cli.py  google_drive_storage.py  network.py  scanner.py  state.py  storage.py  store_writer.py  sync.py  writeback.py
src/personal_data_warehouse_whatsapp/: __init__.py  batcher.py  cli.py  client.py  events.py  session_store.py  state.py
tests/: conftest.py  test_agent_runner.py  test_agent_runner_live.py  test_agent_sessions_defs.py  test_agent_sessions_drive_ingest.py  test_agent_sessions_upload.py  test_agent_sessions_warehouse.py  test_alice_voice_recordings_api.py  test_alice_voice_recordings_defs.py  test_alice_voice_recordings_drive_ingest.py  test_alice_voice_recordings_gmail_recovery.py  test_alice_voice_recordings_sync.py  test_apple_contacts_defs.py  test_apple_contacts_drive_ingest.py  test_apple_contacts_launchd.py  test_apple_contacts_sync.py  test_apple_messages_attachment_enrichment_defs.py  test_apple_messages_audio_transcription_defs.py  test_apple_messages_defs.py  test_apple_messages_drive_ingest.py  test_apple_messages_sync.py  test_apple_notes_defs.py  test_apple_notes_drive_ingest.py  test_apple_notes_notes_app.py  test_apple_notes_sync.py  test_apple_voice_memos_defs.py  test_apple_voice_memos_drive_ingest.py  test_apple_voice_memos_enrichment.py  test_apple_voice_memos_enrichment_defs.py  test_apple_voice_memos_enrichment_eval.py  test_apple_voice_memos_google_drive_storage.py  test_apple_voice_memos_network.py  test_apple_voice_memos_store_writer.py  test_apple_voice_memos_sync.py  test_apple_voice_memos_transcription.py  test_apple_voice_memos_transcription_defs.py  test_apple_voice_memos_writeback.py  test_audio_attachment_enrichment.py  test_build_info.py  test_calendar_mutations.py  (+102 more)
(+137 files in other folders)
