[project]
name = "personal_data_warehouse"
requires-python = ">=3.10,<3.15"
version = "0.1.0"
dependencies = [
    "clickhouse-connect>=0.8.18",
    "clickhouse-driver>=0.2.10",
    "dagster==1.12.22",
    "dagster-postgres>=0.28.22",
    "google-api-python-client>=2.169.0",
    "google-auth-oauthlib>=1.2.2",
    "markdownify>=1.2.2",
    "pillow>=12.2.0",
    "pypdf>=6.10.2",
    "python-dotenv>=1.1.0",
    "requests>=2.32.0",
    "slack-sdk>=3.41.0",
]

[project.scripts]
personal-data-warehouse-gmail-auth = "personal_data_warehouse.gmail_auth:main"
personal-data-warehouse-google-auth = "personal_data_warehouse.gmail_auth:main"
personal-data-warehouse-slack-sync = "personal_data_warehouse.slack_sync:main"
personal-data-warehouse-voice-memos-upload = "personal_data_warehouse_voice_memos.cli:main"
personal-data-warehouse-agent-auth = "personal_data_warehouse.agent_runner:auth_main"

[dependency-groups]
dev = [
    "dagster-webserver",
    "dagster-dg-cli",
    "pytest>=8.3.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
force-include = { "pyproject.toml" = "pyproject.toml" }

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "personal_data_warehouse"
registry_modules = [
    "personal_data_warehouse.components.*",
]
