[project]
name = "personal_data_warehouse"
requires-python = ">=3.10,<3.15"
version = "0.1.0"
dependencies = [
    "clickhouse-connect>=0.8.18",
    "clickhouse-driver>=0.2.10",
    "dagster==1.12.22",
    "dagster-postgres>=0.28.22",
    "google-api-python-client>=2.169.0",
    "google-auth-oauthlib>=1.2.2",
    "markdownify>=1.2.2",
    "pillow>=12.2.0",
    "psycopg2-binary>=2.9.10",
    "pypdf>=6.10.2",
    "pytypedstream>=0.1.0",
    "python-dotenv>=1.1.0",
    "requests>=2.32.0",
    "slack-sdk>=3.41.0",
]

[project.scripts]
personal-data-warehouse-gmail-auth = "personal_data_warehouse.gmail_auth:main"
personal-data-warehouse-google-auth = "personal_data_warehouse.gmail_auth:main"
personal-data-warehouse-slack-sync = "personal_data_warehouse.slack_sync:main"
personal-data-warehouse-apple-voice-memos-upload = "personal_data_warehouse_voice_memos.cli:main"
personal-data-warehouse-voice-memos-upload = "personal_data_warehouse_voice_memos.cli:main"
personal-data-warehouse-apple-notes-upload = "personal_data_warehouse_apple_notes.cli:main"
personal-data-warehouse-apple-messages-upload = "personal_data_warehouse_apple_messages.cli:main"
personal-data-warehouse-agent-auth = "personal_data_warehouse.agent_runner:auth_main"
personal-data-warehouse-postgres-migration = "personal_data_warehouse.postgres_migration:main"
personal-data-warehouse-finance-sync = "personal_data_warehouse.finance_sync:main"
personal-data-warehouse-plaid-auth = "personal_data_warehouse.finance_sync:auth_main"

[dependency-groups]
dev = [
    "dagster-webserver",
    "dagster-dg-cli",
    "pytest>=8.3.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "src/personal_data_warehouse",
    "src/personal_data_warehouse_alice_voice_recordings",
    "src/personal_data_warehouse_apple_messages",
    "src/personal_data_warehouse_apple_notes",
    "src/personal_data_warehouse_voice_memos",
]
force-include = { "pyproject.toml" = "pyproject.toml" }

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "personal_data_warehouse"
registry_modules = [
    "personal_data_warehouse.components.*",
]
